tests/ui/mismatched_types/type-error-diagnostic-in-complex-return.stderr
error[E0308]: mismatched types
  --> $DIR/type-error-diagnostic-in-complex-return.rs:13:41
   |
LL |             let value: &bool = unsafe { &42 };
   |                                         ^^^ expected `&bool`, found `&{integer}`
   |
   = note: expected reference `&bool`
              found reference `&{integer}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
